Fixing configurations and endpoints.